test/bad/double_declaration_01.mpp
var foo:int;
fun foo():int { return 1; };
